--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -240,7 +240,7 @@ Nous reviendrons plus en détail sur l'utilisation de $U$ dans l'analyse des ré
 
 \begin{figure}[t]
 	\centering\includegraphics[width=0.8\textwidth]{lissa/U_BMU_19999.pdf}
-	\caption{Représentation de $U$ selon le BMU $\bmu\m{i}$ dans chaque carte pour des entrées sur une courbe de Lissajous \textbf{D}. La courbe en rouge montre l'approximation du nuage de points par une fonction~: $U$ est ici une fonction de la position du BMU dans chaque carte, ce qui vérifie l'observation réalisée sur le cercle.\label{fig:u_bmu_lissa}}
+	\caption{Représentation de $U$ selon le BMU $\bmu\m{i}$ dans chaque carte (en bleu) pour des entrées sur une courbe de Lissajous \textbf{D}. La courbe en rouge montre l'approximation du nuage de points par une fonction~: $U$ est ici une fonction de la position du BMU dans chaque carte, ce qui vérifie l'observation réalisée sur le cercle.\label{fig:u_bmu_lissa}}
 \end{figure}
 
 
