--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,15 +1,15 @@
 \chapter*{Conclusion}
 
 Cette thèse se place dans un but d'exploration de mécanismes de calcul et d'apprentissage pouvant émerger de l'association de modules en architecture, ici à partir de cartes auto-organisatrices.
-Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules et de façon non supervisée. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
+Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules et de façon non supervisée. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
 L'utilisation de cartes auto-organisatrices en tant que modules est en particulier motivée par leur capacité à représenter un espace d'entrée en une information positionnelle de faible dimension. Cette information rejoint l'organisation observée dans le cortex cérébral, et se place comme une information simple à transmettre au sein d'une architecture.
-Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. Cette thèse se place dans la continuité de ces travaux et souhaite développer le modèle d'architecture et analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
+Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. Cette thèse se place dans la continuité de ces travaux afin de continuer le développement du modèle d'architecture et d'analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
 
 
 Ce manuscrit présente CxSOM \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architectures modulaires.
 Nous avons suivi une démarche synthétique~: à partir des architectures existantes et des modèles étudiés dans notre équipe de recherche, nous avons proposé le modèle d'architecture CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
 
-Dans cette démarche, le chapitre~\ref{chap:architectures} se présente comme une revue des modèles existants d'architectures hiérarchiques et non-hiérarchiques construites à base de cartes auto-organisatrices. 
+Dans cette démarche, le chapitre~\ref{chap:architectures} se présente comme une revue des modèles existants d'architectures hiérarchiques et non hiérarchiques construites à base de cartes auto-organisatrices. 
 Nous avons unifié les notations de ces modèles issus de différents domaines de l'informatique. Cette revue nous a permis d'identifier les mécanismes et structures communs à ces architectures.
 
 
@@ -21,7 +21,7 @@ La relaxation va alors dans le sens de la création d'une architecture autonome.
 Nous avons observé de façon détaillée le mécanisme de relaxation au chapitre \ref{chap:relaxation} afin de valider ce mécanisme comme une recherche de BMU.
 
 La seconde contribution de la thèse est l'élaboration d'une méthodologie d'étude de l'architecture et d'analyse de son apprentissage. 
-Nous avons choisi de nous intéresser à l'apprentissage associatif de données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non-hiérarchiques. Chaque carte de l'architecture prend une entrée externe. 
+Nous avons choisi de nous intéresser à l'apprentissage associatif de données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non hiérarchiques. Chaque carte de l'architecture prend une entrée externe. 
 Le but de l'apprentissage associatif est pour chaque module d'apprendre une représentation de leur entrée externe, tout en apprenant les relations entre les entrées au sein de l'architecture.
 
 
@@ -36,7 +36,7 @@ Nous avons envisagé deux coefficients quantifiant la propriété que $U$ est un
 Ce second indicateur s'est avéré plus adapté que le coefficient d'incertitude pour les variables continues telles que celles présentes dans notre modèle, en notant toutefois que sa valeur devra être utilisée en comparaison à des valeurs d'entrées, et non prise de manière absolue. 
 Cet indicateur numérique permettra de comparer des expériences entre elles et d'optimiser automatiquement les paramètres d'apprentissage de l'architecture.
 Nous avons mis en évidence par le calcul de l'information mutuelle entre $U$ et $\bmu$ que chaque carte perd  globalement de l'information sur le modèle $U$, due à la perte de précision sur la quantification vectorielle de l'entrée externe. On voudra pouvoir mesurer seulement le gain d'information sur $U$ dans une carte, ou dans toute l'architecture, et nous suggérons aux travaux futurs de s'intéresser à d'autres mesures de l'information mutuelle entre les caractéristiques des cartes pour évaluer l'apprentissage.
-Notons que cette méthode d'analyse du modèle n'est pas spécifique à CxSOM. Les éléments de représentation et indicateurs proposés, notamment l'information mutuelle peuvent se transposer à d'autres algorithmes d'apprentissage non-supervisés.
+Notons que cette méthode d'analyse du modèle n'est pas spécifique à CxSOM. Les éléments de représentation et indicateurs proposés, notamment l'information mutuelle, peuvent se transposer à d'autres algorithmes d'apprentissage non-supervisés.
 
 Cette méthode d'analyse nous a fourni un cadre permettant de mieux analyser le comportement d'architectures CxSOM élémentaires de deux et trois cartes en une dimension, apprenant sur des entrées en une dimension.
 Ces expériences sont présentées aux chapitres \ref{chap:analyse} et \ref{chap:analyse2D}.
@@ -91,13 +91,12 @@ Il reste également à définir des cas d'études sur lesquels étudier des arch
 L'aspect modulaire de ces architectures pourrait par exemple nous faire envisager des modules d'interaction avec l'environnement, qui traitent les entrées sensorielles et des modules d'apprentissage, en s'inspirant des structures fonctionnelles observées en biologie \parencite{Ellefsen2015NeuralMH}. 
 Des modélisations récentes du cortex sous forme de réseaux mettent l'accent sur son aspect modulaire multi-échelles \parencite{betzel_multi-scale_2017}~: le cortex semble s'organiser en une architecture dont les modules sont eux-mêmes des architectures modulaires, loin des trois modules que nous avons étudiés dans cette thèse, ce qui peut motiver la construction d'architectures de bien plus grande ampleur.
 
-Un second objectif du développement d'architectures multi-cartes est l'intégration de connexions récurrentes entre cartes, qui pourraient permettre de combiner le traitement de données séquentielles et données multimodales au sein d'une même architecture.
+Un deuxième objectif du développement d'architectures multi-cartes est l'intégration de connexions récurrentes entre cartes, soit en intégrant des cartes récurrentes comme modules de l'architecture, soit en ajoutant des délais dans certaines connexions entre les cartes. Elles pourraient permettre de combiner le traitement de données séquentielles et données multimodales au sein d'une même architecture.
 L'utilisation de la position du BMU comme interface a été utilisée au sein de modèles de cartes récurrentes telles que SOMSD \parencite{hagenbuchner_self-organizing_2003}~; ce modèle ainsi que son adaptation sur deux cartes ont fait l'objet de travaux dans notre équipe \parencite{baheux_towards_2014, fix20}. 
 Les propriétés d'organisation observées sur ce type de cartes récurrentes rejoignent celles observée dans l'architecture CxSOM~: une carte distingue son BMU en fonction de l'entrée externe, mais également en fonction de sa place dans la séquence d'entrée. Cette information transmise entre chaque pas de temps est homogène à celle transmise entre cartes dans l'architecture CxSOM.
 Une perspective d'étude sera ainsi d'associer des connexions temporelles et des connexions multimodales au sein d'une architecture de cartes afin de traiter des données séquentielles.
 Par exemple, un inconvénient de cartes récurrentes simples est le fait qu'elles oublient une séquence une fois que cette dernière n'est plus présentée. Une architecture de cartes pourrait par exemple apporter des modules de mémoire supplémentaire pour l'apprentissage d'un ensemble de séquences et non d'une seule.
 Nous pouvons également envisager la construction d'un système d'apprentissage \og sur le long terme \fg{}, en s'inspirant des modèles proposés en \cite{parisiLL,parisi17}. Un tel système apprend au cours du temps tout en étant capable de générer des prises de décision dans le système. Les modules de l'architecture peuvent apparaître comme des modules de mémoire épisodiques et sémantiques, en choisissant différentes échelles temporelles d'apprentissage pour chaque module.
-
 
 Quels que soient les applications et développements futurs du modèle CxSOM, nos travaux contribuent plus globalement à une vision originale des cartes auto-organisatrices. Nous les avons utilisées comme un support pour la conception d'un système d'apprentissage incluant une dynamique, qui s'éloigne de la vision classique de la SOM comme un algorithme de quantification vectorielle.
 La transmission de la seule position du BMU entre cartes est une façon élégante et simple de connecter des cartes, et les comportements d'organisation complexes observés sur des cartes 1D et 2D soulignent la force que porte une simple information positionnelle utilisée comme représentation d'un espace d'entrée.
