--- a/06b-Analyse-2D/source.tex
+++ b/06b-Analyse-2D/source.tex
@@ -1,5 +1,6 @@
 \documentclass[../main]{subfiles}
 \ifSubfilesClassLoaded{
+	\externaldocument{../main.tex}
     \dominitoc
     \tableofcontentsfile
 	\pagenumbering{arabic}
